# final-project-FDS

./: README.md  architectures.py  configs.py  datasets.py  environment.yaml  generate_plots.py  logger.py  main.py  metrics.py  prep_data.py  pyproject.toml  train.py  trainer.py  transforms.py  utils.py
cwt_pytorch/: __init__.py  cwt.py
notebooks/: test_idea_stefano.ipynb
src/: dataset.py  model.py  stacker.py  train.py  transforms.py
